--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style_index.css">
 </head>
 <body>
-    <h1>Text for git innit</h1>
+    <h1>Если ты это читаешь, значит хотя бы иногда заглядываешь в мои коммиты.</h1>
+    <h2>Этот вебсайт будет посвящён дню рождения Сани. Не знаю насколько затянется эта инициатива, но думаю что ему будет приятно.</h2>
 </body>
 </html>
